# ftrace-viewer

./: .gitmodules  CMakeLists.txt  README.md
src/: ftrace-plotter.h  main.cpp  opengl.h  vulkan.h
tools/: CMakeLists.txt
tools/include/trace/: trace.h
tools/kernel/: 0001-ftrace-add-custom-sched-task-stat-event.patch
tools/perfmon/: CMakeLists.txt  perfmon.c
tools/vkmon/: CMakeLists.txt  vkmon.c  vkmon.json.in
